--- a/jevoo/package.json
+++ b/jevoo/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
