--- a/jevoo/package.json
+++ b/jevoo/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint app/ --fix"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
