--- a/jevoo/package.json
+++ b/jevoo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
+    "start": "next start -p 6001",
     "lint": "eslint",
     "lint:fix": "eslint app/ --fix"
   },
