chore: add @payloadcms/sdk dependency to package.json

--- a/jevoo/package.json
+++ b/jevoo/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint app/ --fix"
   },
   "dependencies": {
+    "@payloadcms/sdk": "^3.61.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
