--- a/jevoo/package.json
+++ b/jevoo/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "gsap": "^3.13.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
